--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -46,6 +46,9 @@ body {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
 }
+.jumbotron .texte {
+	text-align: justify;
+}
 .jumbotron .btn {
   padding: 14px 24px;
   font-size: 21px;
