Optimization and corrections

--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -53,6 +53,10 @@ body {
   padding: 14px 24px;
   font-size: 21px;
 }
+.jumbotron .btn {
+  padding: 14px 24px;
+  font-size: 21px;
+}
 
 /* Supporting marketing content */
 .marketing {
