--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -67,7 +67,14 @@ body {
 .marketing p + h4 {
   margin-top: 28px;
 }
-
+ul li .visible {
+	display: inline !important;
+}
+ul li .invisible {
+	display: none !important;
+	width: 0% !important;
+	height: 0% !important;
+}
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   /* Remove the padding we set earlier */
@@ -86,60 +93,3 @@ body {
     border-bottom: 0;
   }
 }
-/*
-
-.modal {
-    display: none; 
-    position: fixed; 
-    z-index: 1; 
-    left: 0;
-    top: 0;
-    width: 100%; 
-    height: 100%; 
-    overflow: auto; 
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4); 
-    padding-top: 60px;
-}
-
-
-.modal-content {
-    background-color: #fefefe;
-    margin: 5px auto; 
-    border: 1px solid #888;
-    width: 80%; 
-}
-
-.close {
-    
-    position: absolute;
-    right: 25px;
-    top: 0; 
-    color: #000;
-    font-size: 35px;
-    font-weight: bold;
-}
-
-
-.close:hover,
-.close:focus {
-    color: red;
-    cursor: pointer;
-}
-
-
-.animate {
-    -webkit-animation: animatezoom 0.6s;
-    animation: animatezoom 0.6s
-}
-
-@-webkit-keyframes animatezoom {
-    from {-webkit-transform: scale(0)} 
-    to {-webkit-transform: scale(1)}
-}
-
-@keyframes animatezoom {
-    from {transform: scale(0)} 
-    to {transform: scale(1)}
-}
-*/
